# e222crypto

./: .gitmodules  CMakeLists.txt  CURVEPARAM  e222crypto.pc.in
src/: CMakeLists.txt  KeccakHash.c  KeccakHash.h  KeccakP-1600-SnP.h  KeccakP-1600-reference.c  KeccakSponge.inc  KeccakSpongeWidth1600.c  align.h  brg_endian.h  curve.c  digest.c  e222crypto.h  init.c  private.h  rand.c  threads.c
src/keccak/: Keccak-more-compact.c  KeccakSponge-common.h  KeccakSpongeWidth1600.h
test/: CMakeLists.txt  cmp.c  digest.c  error.h  init.h  initfini.c  keygen.c  params.c  privout.c  privpub.c  pubout.c  rand.c  sigout.c  verify.c
